astonvilla-app/astonvilla-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: astonvilla
  namespace: internship

spec:
  replicas: 1
  
  template:
    metadata:
      labels:
        app: astonvilla-pod
    spec:
      containers:
      - name: astonvilla
        image: nourchawebi/astonvilla:1.1.8
        ports:
        - containerPort : 80
        resources :
          requests:
            memory: "256Mi"
            cpu : "250m"
          limits: 
            memory: "512Mi"
            cpu: "500m"
  selector:
    matchLabels: 
      app : astonvilla-pod
