astonvilla-app/astonvilla-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: astonvilla
  namespace: astonvilla
spec:
  replicas: 2
  selector:
    matchLabels:
      app: astonvilla-pod
  template:
    metadata:
      labels:
        app: astonvilla-pod
    spec:
      containers:
        - name: astonvilla
          image: nourchawebi/astonvillaaout2025:1.1.9
          ports:
          - containerPort: 80
          resources:
            limits:
              memory: "500Mi"
