astonvilla-app/nodeport-service.yml
apiVersion: v1
kind: Service
metadata: 
  name: astonvilla-nodeport
  namespace: astonvilla
spec:
  selector:
    app: astonvilla-pod
  ports:
  - protocol: TCP
    port: 4200
    targetPort: 80
    nodePort: 30800
  type: NodePort
