astonvilla-app/astonvilla-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: astonvilla-ingress
spec: 
  ingressClassName: nginx
  rules:
  - host: app.astonvilla.com  
    http: 
      paths: 
      - path: /
        pathType: Prefix  
        backend: 
          service:
            name: astonvilla-svc
            port:  
              number: 4200
